# ai-game-video-generator

./: .gitignore  README.md  agent.py  config.json  db.py  highlighter.py  logging_config.py  main.py  models.py  pyproject.toml  requirements.txt  test_agent.py  video.py
.cursor/rules/: 01-project-overview.mdc  02-workflow.mdc  03-data-models.mdc  04-google-adk-integration.mdc  05-video-processing.mdc  07-logging.mdc  08-development-guide.mdc
docs/: configuration.md
src/: analysis_tracker.py  clip_tracker.py  config.py  delete_files.py  logging_config.py  main.py  prompts.py  shorts_video_concat.py  subtitle_generator.py  used_clips.json  video_analysis.py  video_concatenator.py
src/prompts/: cs2.py  custom.py  overwatch2.py  the_finals.py
src/utils/: analysis_tracker.py  clip_tracker.py  config.py
src/utils/prompts/: __init__.py  cs2.py  custom.py  league_of_legends.py
